Fix errors in styling
Fixed the order of Examination Room carousel images, and image description
text so it doesn't look wonky. Overrode Mantine default styling background
color.

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
-
-
-/* .Main-container {
-    
-    flex-direction: column;
-} */
+:root[data-mantine-color-scheme="light"] body {
+    --mantine-color-body: #f9f9f9;
+  }
 
 .Main-container {
     height: 100%;
-
 }
-
-
 
 .Header {
     display: flex;
