--- a/src/hotspot/hotspot.module.css
+++ b/src/hotspot/hotspot.module.css
@@ -1,26 +1,3 @@
-/* html {
-  -webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  overflow-x: hidden;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font: 16px/1.4 'system-ui', sans-serif;
-  color: #343a40;
-}
-
-p {
-	text-align: center;
-} */
-
-
 .imageMap__container {
     display: grid !important;
     grid-template-columns: repeat(11, 1fr);
@@ -81,31 +58,26 @@ p {
 }
 
 .ExamineImg21 {
-    /* style="grid-column: 4/6; grid-row: 4/8;" */
     grid-column: 4/6; 
     grid-row: 4/8;
 }
 
 .ExamineImg22 {
-    /* style="grid-column: 9/7; grid-row: 8/5;" */
     grid-column: 9/7; 
     grid-row: 8/5;
 }
 
 .HealingImg11 {
-    /* style="grid-column: 7/6; grid-row: 8/8;" */
     grid-column: 7/6;
     grid-row: 8/8;
 }
 
 .HealingImg12 {
-    /* style="grid-column: 4/7; grid-row: 6/5; */
     grid-column: 4/7;
     grid-row: 6/5;
 }
 
 .HealingImg13 {
-    /* style="grid-column: 11/7; grid-row: 12/8; */
     grid-column: 11/9;
     grid-row: 12/8;
 }
